--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -70,12 +70,14 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='fpStylePostBootstrap.css') }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Datatables: -->
+  <!-- Datatables: -NB, these also available from a CDN if required:
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.0/css/jquery.dataTables.css">
+    <script type="text/javascript" language="javascript" src="//cdn.datatables.net/1.10.0/js/jquery.dataTables.js"></script>
+   -->
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='lib/jquery.dataTables.1.10.7.min.css') }}">
   <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='lib/jquery.dataTables.1.10.7.min.js') }}"></script>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='lib/dataTables.bootstrap.1.10.7.css') }}">
   <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='lib/dataTables.bootstrap.1.10.7.js') }}"></script>
-
 
   <title>{{ title }}</title>
 </head>
