--- a/fpa/fp_web_admin/static/fpStyle.css
+++ b/fpa/fp_web_admin/static/fpStyle.css
@@ -37,7 +37,7 @@ fieldset{
  */
 .dataHeader {
     width: 100%;
-    min-width: 800px;  /* It looks a bit better with min width, but maybe not good for mobile. */
+    /*min-width: 800px;   It looks a bit better with min width, but maybe not good for mobile. */
     background: white;
     z-index: 1000;
 }
