--- a/fpa/fp_web_admin/templates/dataPage.html
+++ b/fpa/fp_web_admin/templates/dataPage.html
@@ -10,10 +10,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div id="dataWrapper">
-    <div class="dataHeader">
-      <div id="dataLeftBar">
+    <div class="fpDataTop">
         {{navContent|safe}}
-      </div>
     </div>
 
     <div class="dataContent">
