--- a/fpa/fp_web_admin/templates/contact.html
+++ b/fpa/fp_web_admin/templates/contact.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-	<div id="contents" class=infoText>
-		<div class=fpInfoText>
+	<div class="fpInfoText">
 			<h1>Contact</h1>
 			<h2>FieldPrime Software</h2>
 			<p>
@@ -12,6 +11,5 @@
                 +61 2 6246 4519 <br>
 			</p>
             Please feel free to request new features, report a bug, or ask any question..
-		</div>
 	</div>
 {% endblock %}
