--- a/fpa/fp_web_admin/templates/dataPageWithHelp.html
+++ b/fpa/fp_web_admin/templates/dataPageWithHelp.html
@@ -30,7 +30,7 @@
 
 {% block dataHelpPane %}
 <div id='helpText' class=dataContentHelp>
-  <div class="description not_too_wide">
+  <div class="description fpNotTooWide">
     <div class=dataContentHelpButton>
       <button onclick='toggleHelp()' id='fpHelpButton'>Hide Help</button>
     </div>
