--- a/fpa/fp_web_admin/templates/uploadAttributes.html
+++ b/fpa/fp_web_admin/templates/uploadAttributes.html
@@ -3,7 +3,7 @@
 {% block dataContent %}
 <font color="red">{{msg}}</font>
 <h2>Reload Attributes</h2>
-<div class="not_too_wide infoText">
+<div class="fpNotTooWide fpInfoText">
 <p>
 Select a file containing attribute data for the trial.
 The file should have a similar format as the original trial upload file.
