--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -3,12 +3,12 @@
 class="active"
 {% endblock %}
 {% block content %}
-	<div id="contents" class=infoText>
-		<div class="main">
+	<div class="fpInfoText">
+		<div class="fpNewsMain">
 			<h1>News</h1>
-			<ul class="news">
+			<ul class="fpNewsList">
                 <li>
-                    <div class="date">
+                    <div class="fpNewsDate">
                         <p>
                             <span>30/4</span>
                             2015
@@ -29,7 +29,7 @@ class="active"
                 </li>
 
                 <li>
-                    <div class="date">
+                    <div class="fpNewsDate">
                         <p>
                             <span>18/3</span>
                             2015
@@ -49,7 +49,7 @@ class="active"
                 </li>
 
                 <li>
-                    <div class="date">
+                    <div class="fpNewsDate">
                         <p>
                             <span>12/1</span>
                             2015
@@ -73,7 +73,7 @@ class="active"
                 </li>
 
                 <li>
-                    <div class="date">
+                    <div class="fpNewsDate">
                         <p>
                             <span>12/1</span>
                             2015
@@ -90,7 +90,7 @@ class="active"
                 </li>
 
                 <li>
-                    <div class="date">
+                    <div class="fpNewsDate">
                         <p>
                             <span>9/9</span>
                             2014
@@ -113,7 +113,7 @@ class="active"
                 </li>
 
                 <li>
-                    <div class="date">
+                    <div class="fpNewsDate">
                         <p>
                             <span>1/8</span>
                             2014
@@ -134,7 +134,7 @@ class="active"
                 </li>
 
                 <li>
-                    <div class="date">
+                    <div class="fpNewsDate">
                         <p>
                             <span>18/6</span>
                             2014
@@ -154,7 +154,7 @@ class="active"
                 </li>
 
 				<li>
-					<div class="date">
+					<div class="fpNewsDate">
 						<p>
 							<span>25/2</span>
 							2014
@@ -173,7 +173,7 @@ class="active"
 				</li>
 
 				<li>
-					<div class="date">
+					<div class="fpNewsDate">
 						<p>
 							<span>14/2</span>
 							2014
@@ -189,7 +189,7 @@ class="active"
 				</li>
 
 				<li>
-					<div class="date">
+					<div class="fpNewsDate">
 						<p>
 							<span>7/2</span>
 							2014
