--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -10,7 +10,54 @@ class="active"
                 <li>
                     <div class="fpNewsDate">
                         <p>
-                            <span>30/4</span>
+                            <span>03/6</span>
+                            2015
+                        </p>
+                    </div>
+                    <h2>Alternates to "Row" and "Column"<span>Michael Kirk</span></h2>
+                    <p>
+                        You can now use alternate names for "Row" and "Column" in your trials:
+                        Under the trial "Properties" tab enter alternate values appropriate for
+                        your needs (for example "Range" and "Run"). These options are also there
+                        on the New Trial page, so when create a trial via a CSV file, the file can
+                        contain your preferred names.
+                        <p>
+                        These options have to be set on a per trial basis - if not set, the default
+                        values "Row" and "Column" still apply. In the future these will probably become
+                        configurable on a project basis - to apply to all trials in a project.
+                        <p>
+                        Note that to see the new names on the app itself, you will need to update to the
+                        latest app version - 1.0.4.
+
+
+                        <!-- If you need to link to more..
+                        <span><a href="??.html" class="more">Read More</a></span>
+                        -->
+                    </p>
+                </li>
+
+                <li>
+                    <div class="fpNewsDate">
+                        <p>
+                            <span>03/6</span>
+                            2015
+                        </p>
+                    </div>
+                    <h2>Better mobile support for server<span>Michael Kirk</span></h2>
+                    <p>
+                        We've had another makeover of sorts - primarily to better support
+                        using the server from small screened mobile devices. Please let me know
+                        if you find any issues..
+                        <!-- If you need to link to more..
+                        <span><a href="??.html" class="more">Read More</a></span>
+                        -->
+                    </p>
+                </li>
+
+                <li>
+                    <div class="fpNewsDate">
+                        <p>
+                            <span>25/5</span>
                             2015
                         </p>
                     </div>
