--- a/fpa/fp_web_admin/templates/uploadScores.html
+++ b/fpa/fp_web_admin/templates/uploadScores.html
@@ -6,21 +6,35 @@
 <div class="fpNotTooWide fpInfoText">
 <p>
 Select a CSV file containing score data for the trial.
-The file should have a similar format as the original trial upload file.
-It should be CSV, with a single header row, providing a name for each column,
-and then one line for each node in the trial (for which scores are to be
-added). The first column, or columns, must be attributes that already exist for
-the trial that uniquely identify the nodes - for example Row and Column columns.
-All columns following these must be scores or score metadata. For score values,
-the column header must be the name of a trait, that must already be in the trial.
 
+The file must be comma separated, with a single line of headers, then data rows (no empty rows allowed).
+
+The first 1 or 2 columns determine the node (plot).  There are 3 options here:
+<dl>
+<dt><strong>Option 1:</strong>
+<dd>First column is labelled 'barcode' and this refers to the barcode attribute (loaded up
+with the trial design).</dd>
+<dt><strong>Option 2:</strong>
+<dd>First 2 columns are the row and column (or whatever they are renamed as, eg Range
+and Row)</dd>
+<dt><strong>Option 3:</strong>
+<dd>First column is an attribute name (eg RecId). And the value of this attribute must uniquely
+identify the node (plot)</dd>
+</dl>
+
+After these first 1 or 2 columns, comes the score data. For a single score set, this
+will be first a column headed by the trait name (trait must exist already) with the
+values below it.  After this column, you can optionally 1 to 4 columns for the metadata:
+user, time, latitude, longitude. The column headers here must be the trait name, then
+a colon, then the metadata type.  Eg ginTrait:user, ginTrait:time, ginTrait:latitude, or
+ginTrait:longitude.
 </div>
+<div>
 <form enctype="multipart/form-data"
   action=""
   method="post">
-
 <p>Trial Plan CSV File: <input type="file" id='uploadFile_id' name="file"></p>
 <p><input type="submit" value="Upload"></p>
-
 </form>
+</div>
 {% endblock %}
