--- a/fpa/fp_web_admin/templates/uploadScores.html
+++ b/fpa/fp_web_admin/templates/uploadScores.html
@@ -2,7 +2,7 @@
 
 {% block dataContent %}
 <font color="red">{{msg}}</font>
-<h2>Reload Attributes</h2>
+<h2>Upload ScoreSets</h2>
 <div class="fpNotTooWide fpInfoText">
 <p>
 Select a CSV file containing score data for the trial.
