--- a/fpa/fp_web_admin/templates/uploadScores.html
+++ b/fpa/fp_web_admin/templates/uploadScores.html
@@ -33,7 +33,7 @@ ginTrait:longitude.
 <form enctype="multipart/form-data"
   action=""
   method="post">
-<p>Trial Plan CSV File: <input type="file" id='uploadFile_id' name="file"></p>
+<p><strong>Score data file:</strong><input type="file" id='uploadFile_id' name="file"></p>
 <p><input type="submit" value="Upload"></p>
 </form>
 </div>
